Opened 8 years ago
Closed 8 years ago
#11653 closed bug (fixed)
Layout problems when changing size in DiskProbe's icon view
Reported by: | humdinger | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/DiskProbe | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev48541.
- Open an application with an icon in DiskProbe
- Open its BEOS:ICON attribute
- Move the slider to resize the icon back and fro
The slider is jumping. Sometimes it's to the left of the icon, sometimes below. See attached screencapture.
Attachments (1)
Change History (3)
by , 8 years ago
Attachment: | capture_1.mkv added |
---|
comment:1 by , 8 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
Note:
See TracTickets
for help on using tickets.
moving slider/icon