DiskProbe: convert ImageView to layout kit.

Fixes #11653.